maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: value &&! is not a member of Boolean
    if(y>0&&!aMurNord(x,y-1)){
          ^